A few changes in the index.html about title

--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My App</title>
+    <title>MyKanban</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <div class="container">
-        <img src="logo.png" alt="App Logo" class="logo">
-        <h1>App Name</h1>
+        <img src="image.png" alt="App Logo" class="logo">
+        <h1>MyKanban</h1>
+        <p>ORGANIZATION AND TIMING</p>
+        <p>INEVITABLE SUCCESS</p>
         <div class="buttons">
             <button id="kanban-board">Kanban Board</button>
             <button id="pomodoro-timer">Pomodoro Timer</button>
