--- a/kanban.html
+++ b/kanban.html
@@ -14,9 +14,20 @@
 
 <body>
     <div class="board">
-        <for id="todo-form">
+        <form id="todo-form">
             <input type="text" placeholder="New TODO..." id="todo-input" />
-        </for>
+            <input type="submit">Add +</button>
+        </form>
+        <div class="lanes">
+            <div class="swim-lane" id="todo-lane">
+                <h3 class="heading">TODO</h3>
+
+                <p class="task" draggable="true">Business Information System: Project Management Class recap</p>
+                <p class="task" draggable="true">Work: prepare presentation on new project</p>
+                <p class="task" draggable="true">Home: put jeans to wash</p>
+            </div>
+
+        </div>
     </div>
 
 </body>
