lanes added to the board

--- a/kanban.html
+++ b/kanban.html
@@ -26,6 +26,18 @@
                 <p class="task" draggable="true">Work: prepare presentation on new project</p>
                 <p class="task" draggable="true">Home: put jeans to wash</p>
             </div>
+            <div class="swim-lane" id="todo-lane">
+                <h3 class="heading">WORK IN PROGRESS</h3>
+
+                <p class="task" draggable="true">Integrated-Application Development: User Stories</p>
+                <p class="task" draggable="true">Research Skills: primary search (1st checkpoint)</p>
+            </div>
+            <div class="swim-lane" id="todo-lane">
+                <h3 class="heading">DONE</h3>
+
+                <p class="task" draggable="true">Networking and Virtualization: Snapchat review</p>
+                <p class="task" draggable="true">Walk the dog</p>
+            </div>
 
         </div>
     </div>
