kanban.css created and written. Added a style link in kanban.html

--- a/kanban.html
+++ b/kanban.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="kanban.css" />
     <script src="drag.js" defer></script>
     <script src="todo.js" defer></script>
+    <style src="kanban.css" defer></style>
 </head>
 
 <body>
