--- a/kanban.html
+++ b/kanban.html
@@ -8,6 +8,7 @@
     <title>Kanban Board</title>
 
     <link rel="stylesheet" href="kanban.css" />
+    <script src="render.js" defer></script>
     <script src="drag.js" defer></script>
     <script src="todo.js" defer></script>
     <style src="kanban.css" defer></style>
