I applied SO MANY CHANGES. The most important one was in render.js: now it can open the kanban files

--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
         <p>ORGANIZATION AND TIMING</p>
         <p>INEVITABLE SUCCESS</p>
         <div class="buttons">
-            <button id="kanban-board">Kanban Board</button>
+            <button id="kanban-board" onclick="loadKanbanBoard()">Kanban Board</button>
+            File path: <strong id="./kanban.html"></strong>
             <button id="pomodoro-timer">Pomodoro Timer</button>
         </div>
     </div>
-    <script src="renderer.js"></script>
+    <script src="render.js"></script>
 </body>
 
 </html>
