--- a/kanban.html
+++ b/kanban.html
@@ -7,11 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kanban Board</title>
 
-    <link rel="stylesheet" href="kanban.css" />
-    <script src="render.js" defer></script>
-    <script src="drag.js" defer></script>
-    <script src="todo.js" defer></script>
-    <style src="kanban.css" defer></style>
+    <link rel="stylesheet" href="./kanban.css" />
+    <script src="./render.js" defer></script>
+    <script src="./drag.js" defer></script>
+    <script src="./todo.js" defer></script>
 </head>
 
 <body>
