Kanban code commented

--- a/kanban.html
+++ b/kanban.html
@@ -17,7 +17,7 @@
     <div class="board">
         <form id="todo-form">
             <input type="text" placeholder="New TODO..." id="todo-input" />
-            <input type="submit">Add +</button>
+            <input type="submit"></button>
         </form>
         <div class="lanes">
             <div class="swim-lane" id="todo-lane">
