--- a/kanban.html
+++ b/kanban.html
@@ -18,6 +18,8 @@
         <form id="todo-form">
             <input type="text" placeholder="New TODO..." id="todo-input" />
             <input type="submit"></button>
+            <button id="go-back">Go back to main page</button>
+            <button id="delete-task">Delete task</button>
         </form>
         <div class="lanes">
             <div class="swim-lane" id="todo-lane">
@@ -42,7 +44,6 @@
 
         </div>
     </div>
-
 </body>
 
 </html>
