pomodoro.js: mainButton variable created to startTimer(). pomodoro.html: script added

--- a/PomodoroTimer/pomodoro.html
+++ b/PomodoroTimer/pomodoro.html
@@ -49,6 +49,7 @@
       <audio src="backtowork.mp3" data-sound="pomodoro"></audio>
       <audio src="break.mp3" data-sound="shortBreak"></audio>
       <audio src="break.mp3" data-sound="longBreak"></audio>
-    </div>      
+    </div>
+    <script src="./pomodoro.js" ></script>      
 </body>
 </html>
