added new logo in the index.html changing the home page

--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
 
 <body>
     <div class="container">
-        <img src="image.png" alt="App Logo" class="logo">
-        <h1>MyKanban</h1>
-        <p>ORGANIZATION AND TIMING</p>
-        <p>INEVITABLE SUCCESS</p>
+        <img src="Images/mykanban (2).png" alt="App Logo">
         <div class="buttons">
             <button id="kanban-board" onclick="loadKanbanBoard()">Kanban Board</button>
-            File path: <strong id="./kanban.html"></strong>
+            <strong id="./kanban.html"></strong>
             <button id="pomodoro-timer">Pomodoro Timer</button>
+            <strong id="PomodoroTimer/pomodoro.html"></strong>
         </div>
     </div>
     <script src="render.js"></script>
