changed the 'back to main page' button

--- a/kanban.html
+++ b/kanban.html
@@ -18,9 +18,8 @@
         <form id="todo-form">
             <input type="text" placeholder="New TODO..." id="todo-input" />
             <input type="submit"></button>
-            <button id="go-back">Go back to main page</button>
-            <button id="delete-task">Delete task</button>
         </form>
+        <button id="go-back"><img src="Images/Untitled design.png"></button>
         <div class="lanes">
             <div class="swim-lane" id="todo-lane">
                 <h3 class="heading">TODO</h3>
