changed background and image in kanban.html and kanban.css

--- a/kanban.html
+++ b/kanban.html
@@ -15,11 +15,13 @@
 
 <body>
     <div class="board">
-        <form id="todo-form">
-            <input type="text" placeholder="New TODO..." id="todo-input" />
-            <input type="submit"></button>
-        </form>
-        <button id="go-back"><img src="Images/Untitled design.png"></button>
+        <div class="button-container">
+            <form id="todo-form">
+                <input type="text" placeholder="New TODO..." id="todo-input" />
+                <input type="submit">
+            </form>
+            <button id="go-back"><img src="Images/Untitled design (1).png"></button>
+        </div>        
         <div class="lanes">
             <div class="swim-lane" id="todo-lane">
                 <h3 class="heading">TODO</h3>
