Pomodoro button working in mainpage but not opening the right file in the right way

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="buttons">
             <button id="kanban-board" onclick="loadKanbanBoard()">Kanban Board</button>
             <strong id="./kanban.html"></strong>
-            <button id="pomodoro-timer">Pomodoro Timer</button>
+            <button id="pomodoro-timer" onclick="loadPomodoroTimer()">Pomodoro Timer</button>
             <strong id="PomodoroTimer/pomodoro.html"></strong>
         </div>
     </div>
