--- a/PomodoroTimer/pomodoro.html
+++ b/PomodoroTimer/pomodoro.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pomodoro Timer</title>
-    <link rel="stylesheet" href="./pomodoro.css" />
+    <link rel="stylesheet" href="pomodoro.css" />
 </head>
 <body>
     <main class="app">
@@ -45,11 +45,6 @@
         </button>
       </div>
     </main>
-    <div class="hidden">
-      <audio src="backtowork.mp3" data-sound="pomodoro"></audio>
-      <audio src="break.mp3" data-sound="shortBreak"></audio>
-      <audio src="break.mp3" data-sound="longBreak"></audio>
-    </div>
-    <script src="./pomodoro.js" ></script>      
+    <script src="pomodoro.js" ></script>      
 </body>
 </html>
