home page functionality added to kanban and pomodoro

--- a/PomodoroTimer/pomodoro.html
+++ b/PomodoroTimer/pomodoro.html
@@ -34,6 +34,7 @@
           >
             Long break
           </button>
+          <button id="go-back"><img src="Images/Untitled design (1).png"></button>
         </div>
         <div class="clock" id="js-clock">
           <span id="js-minutes">25</span>
