--- a/kanban.html
+++ b/kanban.html
@@ -27,12 +27,12 @@
                 <h3 class="heading">TODO</h3>
 
             </div>
-            <div class="swim-lane" id="todo-lane">
+            <div class="swim-lane" id="wip-lane">
                 <h3 class="heading">WORK IN PROGRESS</h3>
 
 
             </div>
-            <div class="swim-lane" id="todo-lane">
+            <div class="swim-lane" id="done-lane">
                 <h3 class="heading">DONE</h3>
 
             </div>
