Delete functionality added with Enter. kanban.html and kanban.css moddified as well as drag.js

--- a/kanban.html
+++ b/kanban.html
@@ -36,9 +36,11 @@
                 <h3 class="heading">DONE</h3>
 
             </div>
-
+            <p>For deleting tasks, click on the task and press Enter.</p>
         </div>
+        
     </div>
+    
 </body>
 
 </html>
